Archive/9d5e5c955d4b4506799bba88bd03e810-f674c1a6d04c632b71a62362c0ccfc51/output
+ g++ -std=c++11 -O2 -Wall -pedantic -pthread main.cpp
main.cpp:2:8: error: ‘AudioStream’ does not name a type
 static AudioStream<input_data_t, output_data_t>
        ^
